# verilog-boilerplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  init.go  ledmodule.cpp  ledmodule.v  module.v  testbench.cpp  testbench.v
.github/workflows/: release.yml
